Fix the accuracy not correct issue

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,4 @@
 [submodule "sgl-kernel/3rdparty/composable_kernel"]
 	path = sgl-kernel/3rdparty/composable_kernel
 	url = https://github.com/ROCm/composable_kernel.git
+	branch = huaiguxu/dev/moe2
