--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -17,9 +17,9 @@ ARG TRITON_REPO="https://github.com/triton-lang/triton.git"
 ARG TRITON_COMMIT="845d75a"
 
 
-# TODO (INT4-FP8)
 ARG ATER_REPO="https://github.com/HaiShaw/ater"
-ARG CK_COMMITS="fa05ae"
+ARG ATER_BRANCH="devx"
+ARG CK_COMMITS="3335cd2"
 
 RUN git clone ${SGL_REPO} \
     && cd sglang \
@@ -53,7 +53,11 @@ RUN git clone ${TRITON_REPO} \
 
 RUN git clone ${ATER_REPO} \
     && cd ater \
+    && git checkout ${ATER_BRANCH} \
     && git submodule update --init --recursive \
+    && cd 3rdparty/composable_kernel \
+    && git checkout ${CK_COMMITS} \
+    && cd ../.. \
     && PREBUILD_KERNELS=1 GPU_ARCHS=gfx942 python3 setup.py develop
 
 # Performance environment variable.
